[package]
name = "wkvstore"
version = "0.1.0"
authors = ["Jose Acevedo <acevedoflores.jose@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio={version="1.6.0", features=["rt", "rt-multi-thread", "time"]}
