[package]
name = "max_load"
version = "0.1.0"
authors = ["Jose Acevedo <acevedoflores.jose@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
wkvstore={path="../../../wkvstore"}
rand="0.8.3"
